--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,6 @@ a {
 #navbar {
   background-color: #35DBF3;
   position: fixed;
-  top: -80px;
   width: 100%;
   transition: top 0.3s;
   z-index: 3;
@@ -153,6 +152,16 @@ a {
 .col p {
   padding: 15px 20px;
   text-align: left;
+}
+
+.sec_b a {
+  filter: grayscale(100%);
+  transform: translate(-50%, -50%);
+  transition: .5s ease-in-out;
+}
+
+.sec_b a:hover {
+  filter: grayscale(0%);
 }
 
 .row img {
