--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ a {
   width: 100%;
   transition: top 0.3s;
   z-index: 3;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Style the navbar links */
